Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/OldArray.out
OldArray.java:12:11: compiler.err.expected: ']'
OldArray.java:12:13: compiler.err.expected: token.identifier
OldArray.java:12:16: compiler.err.invalid.meth.decl.ret.type.req
3 errors
